--- a/acute_kidney_injury.html
+++ b/acute_kidney_injury.html
@@ -24,24 +24,23 @@
 
 <body>
     <!-- Navbar (reused from your index)  -->
-    <nav class="navbar navbar-expand-lg py-3 fixed-top bg-light">
+   <nav class="navbar navbar-expand-lg py-3 fixed-top bg-light">
         <div class="container d-flex justify-content-between align-items-center">
 
             <!-- Logo -->
             <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html" aria-label="Kidney Care Home">
-                <img src="images/Logo.png" alt="Dr Jitendra Kumar Logo" class="img-fluid" style="max-height: 60px;">
+                <img src="images/Logo.png" alt="Dr Jitendra Kumar Logo" class="img-fluid" style="max-height: 55px;">
             </a>
 
             <!-- Toggler -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
-                aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler border-0 shadow-none" type="button" data-bs-toggle="collapse"
+                data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Nav Links -->
-            <div id="nav" class="collapse navbar-collapse justify-content-center">
+            <div id="nav" class="collapse navbar-collapse justify-content-lg-center">
                 <ul class="navbar-nav gap-lg-1 align-items-lg-center">
-
                     <li class="nav-item"><a class="nav-link fw-medium" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link fw-medium" href="about.html">About</a></li>
 
@@ -53,12 +52,12 @@
                         </a>
                         <ul class="dropdown-menu fade-down shadow" aria-labelledby="servicesDropdown">
                             <li><a class="dropdown-item" href="kidneydiseases.html">Kidney Diseases</a></li>
-                            <li><a class="dropdown-item" href="acutekidneyinjury.html">Acute Kidney Injury</a></li>
+                            <li><a class="dropdown-item" href="acute_kidney_injury.html">Acute Kidney Injury</a></li>
                             <li><a class="dropdown-item" href="chronic-kidney-diseases.html">Chronic Kidney Diseases</a>
                             </li>
                             <li><a class="dropdown-item" href="dialysis.html">Dialysis</a></li>
                             <li><a class="dropdown-item" href="nephritic_syndrome.html">Nephritic Syndrome</a></li>
-                            <li><a class="dropdown-item" href="nephrotic_syndrome.html">Nephritoc Syndrome</a></li>
+                            <li><a class="dropdown-item" href="nephrotic_syndrome.html">Nephrotic Syndrome</a></li>
                             <li><a class="dropdown-item" href="renal_biopsy.html">Renal (Kidney) Biopsy</a></li>
                             <li><a class="dropdown-item" href="kidney_transplant.html">Renal (Kidney) Transplant</a>
                             </li>
@@ -72,13 +71,13 @@
                             Events
                         </a>
                         <ul class="dropdown-menu fade-down shadow" aria-labelledby="eventsDropdown">
-                            <li><a class="dropdown-item" href="#article">Article</a></li>
-                            <li><a class="dropdown-item" href="#booklaunch">Book Lanuch</a></li>
-                            <li><a class="dropdown-item" href="#cme">CME</a></li>
-                            <li><a class="dropdown-item" href="#eventbyaccord">Event by Accord</a></li>
-                            <li><a class="dropdown-item" href="#isot">ISOT</a></li>
-                            <li><a class="dropdown-item" href="#independence">Independence</a></li>
-                            <li><a class="dropdown-item" href="#homeopathy">Homeopathy</a></li>
+                            <li><a class="dropdown-item" href="article.html">Article</a></li>
+                            <li><a class="dropdown-item" href="book_launch.html">Book Launch</a></li>
+                            <li><a class="dropdown-item" href="cme.html">CME</a></li>
+                            <li><a class="dropdown-item" href="event_by_accord.html">Event by Accord</a></li>
+                            <li><a class="dropdown-item" href="isot.html">ISOT</a></li>
+                            <li><a class="dropdown-item" href="independence.html">Independence</a></li>
+                            <li><a class="dropdown-item" href="homepathy.html">Homeopathy</a></li>
                         </ul>
                     </li>
 
@@ -89,21 +88,26 @@
                             Gallery
                         </a>
                         <ul class="dropdown-menu fade-down shadow" aria-labelledby="galleryDropdown">
-                            <li><a class="dropdown-item" href="#photos">Photo Gallery</a></li>
-                            <li><a class="dropdown-item" href="#videos">Video Gallery</a></li>
+                            <li><a class="dropdown-item" href="photo-gallery.html">Photo Gallery</a></li>
+                            <li><a class="dropdown-item" href="video-gallery.html">Video Gallery</a></li>
                         </ul>
                     </li>
 
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#news">News</a></li>
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#blogs">Blogs</a></li>
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="blogs.html">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="contact.html">Contact</a></li>
 
+                    <!-- CTA Button inside collapse for mobile -->
+                    <li class="nav-item d-lg-none mt-3">
+                        <a class="btn btn-cta w-100 text-white py-2" href="contact.html"><i
+                                class="bi bi-calendar me-2"></i>Book Appointment</a>
+                    </li>
                 </ul>
             </div>
 
-            <!-- Book Appointment Button -->
-            <a class="btn btn-cta text-white px-4 py-2" href="#contact">Book Appointment</a>
-
+            <!-- CTA Button (Desktop only) -->
+            <a class="btn btn-cta text-white px-4 py-2 d-none d-lg-inline-block" href="contact.html"><i
+                    class="bi bi-calendar me-2"></i>Book Appointment</a>
         </div>
     </nav>
 
@@ -259,13 +263,61 @@
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#prevention">
-                                        PREVENTION OF KIDNEY DISEASE
+                                        What Causes Acute Kidney Injury ?
                                     </button>
                                 </h2>
                                 <div id="prevention" class="accordion-collapse collapse" data-bs-parent="#kdAccordion">
                                     <div class="accordion-body">
-                                        Control sugar and BP, maintain healthy weight, avoid smoking, exercise daily,
-                                        limit salt, stay hydrated, and follow medical advice regularly.
+                                        Acute kidney injury (AKI) usually happens when your kidneys are damaged
+                                        suddenly. The damage that leads to AKI may be caused by: <br><br>
+
+                                        <ul>
+                                            <li>Not enough blood flowing through your kidneys</li>
+                                            <li>An injury directly to your kidneys or a problem with your kidneys</li>
+                                            <li>A blockage in your ureters, the tubes that take urine from your kidneys
+                                                to your bladder
+                                                Some examples of problems that can cause you to have too little blood
+                                                flowing through your kidneys are:</li>
+                                            <li>Low blood pressure</li>
+                                            <li>Bleeding too much</li>
+                                            <li>Having severe diarrhea</li>
+                                            <li>Heart disease or heart attack</li>
+                                            <li>Infection</li>
+                                            <li>Liver failure</li>
+                                            <li>Using NSAIDs (non-steroidal anti-inflammatory drugs), such as aspirin,
+                                                ibuprofen and naproxen</li>
+                                            <li>Serious burns</li>
+                                            <li>Being very dehydrated (not having enough fluid in your body)</li>
+                                            <li>Severe allergic reaction</li>
+                                        </ul>
+
+                                        Some examples of problems that can cause direct damage to your kidneys are:
+                                        <br><br>
+
+                                        <ul>
+                                            <li>Blood clots in or around the kidneys</li>
+                                            <li>Diseases that affect the kidneys, such as glomerulonephritis and lupus
+                                            </li>
+                                            <li>Infection</li>
+                                            <li>Certain medicines, such as some chemotherapy drugs, some antibiotics and
+                                                contrast dyes used during CT scans, MRI scans and other imaging tests
+                                            </li>
+                                            <li>Alcohol or drug abuse</li>
+                                            <li>Some blood or blood vessel disorders</li>
+                                            <li>Heart disease or heart attack</li>
+                                        </ul>
+
+                                        Some examples of problems that could cause a blockage in your urinary tract are:
+                                        <br><br>
+
+                                        <ul>
+                                            <li>Some cancers</li>
+                                            <li>Blood clots in or around the kidneys</li>
+                                            <li>Kidney stones</li>
+                                            <li>Bladder problems</li>
+                                            <li>Enlarged prostate (in men)</li>
+                                        </ul>
+
                                     </div>
                                 </div>
                             </div>
@@ -274,13 +326,25 @@
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#check">
-                                        WAYS TO CHECK KIDNEY HEALTH
+                                        What is the treatment for acute kideny injury ?
                                     </button>
                                 </h2>
                                 <div id="check" class="accordion-collapse collapse" data-bs-parent="#kdAccordion">
                                     <div class="accordion-body">
-                                        Serum creatinine with eGFR, urine routine and albumin, ultrasound kidneys, blood
-                                        pressure monitoring, and physician examination.
+                                        The treatment for AKI depends on what caused it to happen. Most people need to
+                                        stay in the hospital during treatment and until their kidneys recover. While you
+                                        are being treated for the problem that caused your AKI, you may also have
+                                        treatments to prevent problems that can make it harder for your kidneys to heal.
+                                        Some possible treatments include: <br><br>
+
+                                        <ul>
+                                            <li>Temporary hemodialysis to do the work that your kidneys should be doing, until they can recover</li>
+                                            <li>Medicines to control the amounts of vitamins and minerals in your blood</li>
+                                            <li>Treatments to keep the right amount of fluid in your blood</li>
+                                        </ul>
+
+                                        When you return home, your doctor may ask you to follow a kidney-friendly diet plan to help your kidneys continue to heal. Your doctor may be able to refer you to a dietitian, who can help you make a kidney-friendly diet plan that works for you.
+
                                     </div>
                                 </div>
                             </div>
@@ -294,9 +358,13 @@
                                 </h2>
                                 <div id="steps" class="accordion-collapse collapse" data-bs-parent="#kdAccordion">
                                     <div class="accordion-body">
-                                        Eat balanced food, keep active, sleep well, avoid unnecessary painkillers,
-                                        manage diabetes/Hypertension, get periodic kidney tests, and consult a
-                                        nephrologist early.
+                                        Because AKI happens suddenly, it can be hard to predict or prevent it. But taking good care of your kidneys can help prevent AKI, chronic kidney disease (CKD) and kidney failure/ESRD. Follow these general rules to keep your kidneys as healthy as possible: <br><br>
+
+                                        <ul>
+                                            <li>Work with your doctor to manage diabetes and high blood pressure.</li>
+                                            <li>Live healthy! Eat a diet low in salt and fat, exercise for 30 minutes at least five days per week, limit alcohol and take all prescription medicines as your doctor tells you to.</li>
+                                            <li>If you take over-the-counter pain medicines, such as aspirin or ibuprofen, do not take more than is recommended on the package. Taking too much of these medicines can hurt your kidneys and can cause AKI.</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -375,17 +443,20 @@
                         <li>Sat-Sun: Closed</li>
                     </ul>
                     <div class="d-flex gap-2">
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="WhatsApp"><i
-                                class="bi bi-whatsapp"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="Facebook"><i
-                                class="bi bi-facebook"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="twitter"><i
-                                class="bi bi-twitter"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="linkedin"><i
+                        <a class="btn btn-sm btn-outline-light" href="https://wa.me/+918178019467"
+                            aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+                        <a class="btn btn-sm btn-outline-light"
+                            href="https://www.facebook.com/people/Dr-Jitendra-Kumar/100054350717912/"
+                            aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="https://x.com/jitendranephro"
+                            aria-label="twitter"><i class="bi bi-twitter"></i></a>
+                        <a class="btn btn-sm btn-outline-light"
+                            href="https://www.linkedin.com/in/dr-jitendra-kumar-5a02b3217/" aria-label="linkedin"><i
                                 class="bi bi-linkedin"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="Instagram"><i
-                                class="bi bi-instagram"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="youtube"><i
+                        <a class="btn btn-sm btn-outline-light" href="https://www.instagram.com/drjitendra_nephro/"
+                            aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                        <a class="btn btn-sm btn-outline-light"
+                            href="https://www.youtube.com/channel/UCXXfmTIOboHqmXR7XWWOUwA" aria-label="youtube"><i
                                 class="bi bi-youtube"></i></a>
                     </div>
                 </div>
