--- a/event_by_accord.html
+++ b/event_by_accord.html
@@ -143,19 +143,18 @@
 
             <!-- Logo -->
             <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html" aria-label="Kidney Care Home">
-                <img src="images/Logo.png" alt="Dr Jitendra Kumar Logo" class="img-fluid" style="max-height: 60px;">
+                <img src="images/Logo.png" alt="Dr Jitendra Kumar Logo" class="img-fluid" style="max-height: 55px;">
             </a>
 
             <!-- Toggler -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
-                aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler border-0 shadow-none" type="button" data-bs-toggle="collapse"
+                data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Nav Links -->
-            <div id="nav" class="collapse navbar-collapse justify-content-center">
+            <div id="nav" class="collapse navbar-collapse justify-content-lg-center">
                 <ul class="navbar-nav gap-lg-1 align-items-lg-center">
-
                     <li class="nav-item"><a class="nav-link fw-medium" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link fw-medium" href="about.html">About</a></li>
 
@@ -167,11 +166,12 @@
                         </a>
                         <ul class="dropdown-menu fade-down shadow" aria-labelledby="servicesDropdown">
                             <li><a class="dropdown-item" href="kidneydiseases.html">Kidney Diseases</a></li>
-                            <li><a class="dropdown-item" href="acutekidneyinjury.html">Acute Kidney Injury</a></li>
-                            <li><a class="dropdown-item" href="chronic-kidney-diseases.html">Chronic Kidney Diseases</a></li>
+                            <li><a class="dropdown-item" href="acute_kidney_injury.html">Acute Kidney Injury</a></li>
+                            <li><a class="dropdown-item" href="chronic-kidney-diseases.html">Chronic Kidney Diseases</a>
+                            </li>
                             <li><a class="dropdown-item" href="dialysis.html">Dialysis</a></li>
                             <li><a class="dropdown-item" href="nephritic_syndrome.html">Nephritic Syndrome</a></li>
-                            <li><a class="dropdown-item" href="nephrotic_syndrome.html">Nephritoc Syndrome</a></li>
+                            <li><a class="dropdown-item" href="nephrotic_syndrome.html">Nephrotic Syndrome</a></li>
                             <li><a class="dropdown-item" href="renal_biopsy.html">Renal (Kidney) Biopsy</a></li>
                             <li><a class="dropdown-item" href="kidney_transplant.html">Renal (Kidney) Transplant</a>
                             </li>
@@ -186,12 +186,12 @@
                         </a>
                         <ul class="dropdown-menu fade-down shadow" aria-labelledby="eventsDropdown">
                             <li><a class="dropdown-item" href="article.html">Article</a></li>
-                            <li><a class="dropdown-item" href="book_launch.html">Book Lanuch</a></li>
+                            <li><a class="dropdown-item" href="book_launch.html">Book Launch</a></li>
                             <li><a class="dropdown-item" href="cme.html">CME</a></li>
                             <li><a class="dropdown-item" href="event_by_accord.html">Event by Accord</a></li>
-                            <li><a class="dropdown-item" href="#isot">ISOT</a></li>
-                            <li><a class="dropdown-item" href="#independence">Independence</a></li>
-                            <li><a class="dropdown-item" href="#homeopathy">Homeopathy</a></li>
+                            <li><a class="dropdown-item" href="isot.html">ISOT</a></li>
+                            <li><a class="dropdown-item" href="independence.html">Independence</a></li>
+                            <li><a class="dropdown-item" href="homepathy.html">Homeopathy</a></li>
                         </ul>
                     </li>
 
@@ -202,21 +202,26 @@
                             Gallery
                         </a>
                         <ul class="dropdown-menu fade-down shadow" aria-labelledby="galleryDropdown">
-                            <li><a class="dropdown-item" href="#photos">Photo Gallery</a></li>
-                            <li><a class="dropdown-item" href="#videos">Video Gallery</a></li>
+                            <li><a class="dropdown-item" href="photo-gallery.html">Photo Gallery</a></li>
+                            <li><a class="dropdown-item" href="video-gallery.html">Video Gallery</a></li>
                         </ul>
                     </li>
 
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#news">News</a></li>
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#blogs">Blogs</a></li>
-                    <li class="nav-item"><a class="nav-link fw-medium" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="blogs.html">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link fw-medium" href="contact.html">Contact</a></li>
 
+                    <!-- CTA Button inside collapse for mobile -->
+                    <li class="nav-item d-lg-none mt-3">
+                        <a class="btn btn-cta w-100 text-white py-2" href="contact.html"><i
+                                class="bi bi-calendar me-2"></i>Book Appointment</a>
+                    </li>
                 </ul>
             </div>
 
-            <!-- Book Appointment Button -->
-            <a class="btn btn-cta text-white px-4 py-2" href="#contact">Book Appointment</a>
-
+            <!-- CTA Button (Desktop only) -->
+            <a class="btn btn-cta text-white px-4 py-2 d-none d-lg-inline-block" href="contact.html"><i
+                    class="bi bi-calendar me-2"></i>Book Appointment</a>
         </div>
     </nav>
 
@@ -366,17 +371,20 @@
                         <li>Sat-Sun: Closed</li>
                     </ul>
                     <div class="d-flex gap-2">
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="WhatsApp"><i
-                                class="bi bi-whatsapp"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="Facebook"><i
-                                class="bi bi-facebook"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="twitter"><i
-                                class="bi bi-twitter"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="linkedin"><i
+                        <a class="btn btn-sm btn-outline-light" href="https://wa.me/+918178019467"
+                            aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+                        <a class="btn btn-sm btn-outline-light"
+                            href="https://www.facebook.com/people/Dr-Jitendra-Kumar/100054350717912/"
+                            aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                        <a class="btn btn-sm btn-outline-light" href="https://x.com/jitendranephro"
+                            aria-label="twitter"><i class="bi bi-twitter"></i></a>
+                        <a class="btn btn-sm btn-outline-light"
+                            href="https://www.linkedin.com/in/dr-jitendra-kumar-5a02b3217/" aria-label="linkedin"><i
                                 class="bi bi-linkedin"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="Instagram"><i
-                                class="bi bi-instagram"></i></a>
-                        <a class="btn btn-sm btn-outline-light" href="#" aria-label="youtube"><i
+                        <a class="btn btn-sm btn-outline-light" href="https://www.instagram.com/drjitendra_nephro/"
+                            aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                        <a class="btn btn-sm btn-outline-light"
+                            href="https://www.youtube.com/channel/UCXXfmTIOboHqmXR7XWWOUwA" aria-label="youtube"><i
                                 class="bi bi-youtube"></i></a>
                     </div>
                 </div>
